[gd_scene load_steps=26 format=2]

[ext_resource path="res://asset/lari/1.png" type="Texture" id=1]
[ext_resource path="res://asset/lompat/1.png" type="Texture" id=2]
[ext_resource path="res://asset/lompat/3.png" type="Texture" id=3]
[ext_resource path="res://asset/lompat/2.png" type="Texture" id=4]
[ext_resource path="res://asset/lari/5.png" type="Texture" id=5]
[ext_resource path="res://asset/lari/8.png" type="Texture" id=6]
[ext_resource path="res://asset/lompat/4.png" type="Texture" id=7]
[ext_resource path="res://asset/lari/6.png" type="Texture" id=8]
[ext_resource path="res://asset/lompat/6.png" type="Texture" id=9]
[ext_resource path="res://asset/lari/3.png" type="Texture" id=10]
[ext_resource path="res://asset/lari/2.png" type="Texture" id=11]
[ext_resource path="res://asset/lompat/5.png" type="Texture" id=12]
[ext_resource path="res://asset/lari/9.png" type="Texture" id=13]
[ext_resource path="res://asset/lari/4.png" type="Texture" id=14]
[ext_resource path="res://asset/lari/7.png" type="Texture" id=15]
[ext_resource path="res://asset/diam/diam.png" type="Texture" id=16]
[ext_resource path="res://aktor/player/Player.gd" type="Script" id=17]
[ext_resource path="res://Resource/music/sfx_step_grass_l.wav" type="AudioStream" id=18]
[ext_resource path="res://object/HUDCanvasLayer.tscn" type="PackedScene" id=19]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 11 ), ExtResource( 10 ), ExtResource( 14 ), ExtResource( 5 ), ExtResource( 8 ), ExtResource( 15 ), ExtResource( 6 ), ExtResource( 13 ) ],
"loop": true,
"name": "lari",
"speed": 15.0
}, {
"frames": [ ExtResource( 16 ) ],
"loop": true,
"name": "diam",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 7 ), ExtResource( 12 ), ExtResource( 9 ) ],
"loop": false,
"name": "lompat",
"speed": 7.1
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 264.633
height = 1006.37

[sub_resource type="Animation" id=3]
resource_name = "_SETUP"
tracks/0/type = "value"
tracks/0/path = NodePath("Body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -7815.28, 3397.95 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Body:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "flash"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("Body:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.0705882 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.0705882 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.0705882 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -7815.28, 3397.95 ), Vector2( -7870.34, 3515.93 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -180.0 ]
}

[sub_resource type="CapsuleShape2D" id=6]
radius = 232.666
height = 580.258

[node name="Player" type="KinematicBody2D"]
position = Vector2( 1067.05, 166.505 )
scale = Vector2( 0.03, 0.03 )
z_index = 1
collision_layer = 3
collision_mask = 3
script = ExtResource( 17 )
max_speed = 140
accel = 25
jump_force = 365

[node name="Body" type="AnimatedSprite" parent="."]
position = Vector2( -7815.28, 3397.95 )
scale = Vector2( 2, 2 )
frames = SubResource( 1 )
animation = "diam"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -7722.32, 3388.21 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( -4580.74, 2708.16 )
current = true
zoom = Vector2( 0.3, 0.3 )
drag_margin_v_enabled = true
smoothing_enabled = true

[node name="CekTanah" type="RayCast2D" parent="."]
position = Vector2( -7570.25, 3540.65 )
scale = Vector2( 30, 30 )
enabled = true
cast_to = Vector2( 0, 5 )

[node name="AudioEffect" type="Node2D" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="AudioEffect"]
stream = ExtResource( 18 )
volume_db = 16.082

[node name="HUDCanvasLayer" parent="." instance=ExtResource( 19 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "_SETUP"
anims/_SETUP = SubResource( 3 )
anims/flash = SubResource( 4 )
anims/pass_out = SubResource( 5 )

[node name="EnemyDetector" type="Area2D" parent="."]
modulate = Color( 0.027451, 0.67451, 0.415686, 1 )
position = Vector2( -7657.83, 3475.9 )
monitorable = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetector"]
position = Vector2( 42.9863, -42.9922 )
rotation = 1.5708
shape = SubResource( 6 )
